--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "@tanstack/router-devtools": "1.65.0",
     "@tanstack/router-plugin": "1.65.0",
     "@testing-library/react": "16.0.1",
-    "@vitejs/plugin-react": "4.3.1",
-    "@vitest/browser": "2.1.3",
-    "@vitest/coverage-v8": "^2.1.3",
-    "@vitest/ui": "^2.1.3",
+    "@vitest/browser": "^3.0.8",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vitest/ui": "^3.0.8",
     "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react": "7.37.1",
     "globals": "15.9.0",
-    "happy-dom": "15.7.4",
+    "happy-dom": "^15.11.7",
     "playwright": "1.48.0",
     "prettier": "3.3.3",
-    "vite": "5.4.2",
-    "vitest": "2.1.3",
-    "vitest-browser-react": "0.0.1",
+    "vitest": "^2.1.9",
+    "vitest-browser-react": "^0.1.1",
     "vitest-fetch-mock": "0.3.0"
   },
   "dependencies": {
     "@tanstack/react-query": "5.59.13",
     "@tanstack/react-query-devtools": "5.59.13",
     "@tanstack/react-router": "1.65.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@vitejs/plugin-react": "^4.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^6.2.2"
   }
 }
