--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "description": "The Complete Intro to React v9, as taught by Brian Holt for Frontend Masters",
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "5.59.7",
+    "@tanstack/react-router": "^1.114.22",
     "@tanstack/router-devtools": "1.65.0",
-    "@tanstack/router-plugin": "1.65.0",
+    "@tanstack/router-plugin": "^1.65.0",
     "@testing-library/react": "16.0.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.8",
     "@vitest/ui": "^3.0.8",
+    "babel-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
     "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react": "7.37.1",
@@ -39,10 +42,8 @@
   "dependencies": {
     "@tanstack/react-query": "5.59.13",
     "@tanstack/react-query-devtools": "5.59.13",
-    "@tanstack/react-router": "1.65.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "vite": "^6.2.2"
   }
 }
